Fix error in last checkin for bug 344050.